# voice_grab

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/octomap/lib/octomap/: octoload.py
install/octomap/share/octomap/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/octomap_mapping/share/octomap_mapping/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/octomap_ros/include/octomap_ros/: conversions.hpp
install/octomap_ros/share/octomap_ros/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/octomap_server/include/octomap_server/: octomap_server.hpp  octomap_server_multilayer.hpp  octomap_server_static.hpp  tracking_octomap_server.hpp
install/octomap_server/lib/octomap_server/: color_octomap_server_node  octomap_eraser_cli.py  octomap_saver_node  octomap_server_multilayer_node  octomap_server_node  octomap_server_static_node  tracking_octomap_server_node
install/octomap_server/share/octomap_server/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/robotiq/share/robotiq/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robotiq_2f_140_gripper_visualization/share/robotiq_2f_140_gripper_visualization/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robotiq_2f_85_gripper_visualization/share/robotiq_2f_85_gripper_visualization/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/robotiq_moveit_config/share/robotiq_moveit_config/: .setup_assistant  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ur_description/share/ur_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ur_moveit_config/share/ur_moveit_config/: .setup_assistant  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ur_robotiq/share/ur_robotiq/: local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ur_robotiq_description/lib/ur_robotiq_description/: Move
install/ur_robotiq_description/share/ur_robotiq_description/: local_setup.zsh  package.dsv  package.ps1  package.sh
install/voice_grabber/lib/voice_grabber/: Speech_Listner_Node  Text_Display_Node  Vosk.py  mtc_node
install/voice_grabber/share/voice_grabber/: local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/zed_components/include/zed_components/: cost_traversability.hpp  sl_logging.hpp  sl_tools.hpp  sl_types.hpp  sl_win_avg.hpp  visibility_control.hpp  zed_camera_component.hpp
install/zed_components/share/zed_components/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  (+2 more)
log/: latest_build  latest_list
ros2_ws/install/: setup.sh
ros2_ws/log/: latest_build
ros2_ws/src/ur_robotiq/ur_robotiq_description/: CMakeLists.txt  package.xml
ros2_ws/src/ur_robotiq/ur_robotiq_description/Rviz/: Default.rviz
ros2_ws/src/ur_robotiq/ur_robotiq_description/launch/: launch_sim.launch.py
ros2_ws/src/ur_robotiq/ur_robotiq_description/src/: MoveTheArm.cpp
ros2_ws/src/ur_robotiq/ur_robotiq_description/urdf/: ur3e_robotiq_2f_85.urdf.xacro  zed_descr.xacro  zed_macro.xacro
ros2_ws/src/voice_grabber/: CMakeLists.txt
src/Universal_Robots_ROS2_Description/: CMakeLists.txt  package.xml
src/Universal_Robots_ROS2_Description/config/: gripper_control.yaml
src/Universal_Robots_ROS2_Description/launch/: view_ur.launch.py
src/Universal_Robots_ROS2_Description/rviz/: view_robot.rviz
src/Universal_Robots_ROS2_Description/urdf/: robotiq_2f_85.urdf.xacro  robotiq_gripper.ros2_control.xacro  ur.ros2_control.xacro  ur.urdf.xacro  ur_macro.xacro  zed_descr.urdf.xacro
src/Universal_Robots_ROS2_Description/world/: empty.world
src/models/autocar/: model.config  model.sdf
src/models/ground_plane/: model.sdf
src/octomap/: CMakeLists.txt  package.xml
src/octomap/config/: octomap_params.yaml
src/octomap/launch/: load_octomap.launch.py  load_octomap.launch.xml
src/octomap/map/: big_octomap.bt  med_octomap.bt  small_octomap.bt
src/octomap/src/: octoload.py
src/octomap_mapping/octomap_server/: CMakeLists.txt
src/robotiq/robotiq/: CMakeLists.txt
src/robotiq/robotiq_2f_140_gripper_visualization/: CMakeLists.txt
src/robotiq/robotiq_2f_85_gripper_visualization/: CMakeLists.txt  package.xml
src/robotiq_moveit_config/: .setup_assistant  CMakeLists.txt
src/robotiq_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  ur.ros2_control.xacro  ur.srdf  ur.urdf.xacro  ur5.urdf
src/robotiq_moveit_config/launch/: move_group.launch.py
src/ur_description/: CMakeLists.txt  package.xml
src/ur_description/config/: simulation_controllers.yaml
src/ur_description/launch/: view_ur.launch.py
src/ur_description/rviz/: view_robot.rviz
src/ur_description/urdf/: real_descr.urdf.xacro  robotiq_2f_85.urdf.xacro  ur.xacro  ur_gripper.ros2_control.xacro  ur_macro.xacro  zed_descr.urdf.xacro
src/ur_description/world/: empty.world
src/ur_moveit_config/: .setup_assistant  package.xml
src/ur_moveit_config/config/: initial_positions.yaml  moveit_controllers.yaml  ros2_controllers.yaml  sensors_3d.yaml  ur.gazebo_control.xacro  ur.srdf  ur.urdf.xacro  ur5.urdf
src/ur_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py
src/ur_robotiq/ur_robotiq_description/: CMakeLists.txt
src/voice_grabber/: CMakeLists.txt  package.xml
src/voice_grabber/launch/: launch_aud.launch.py  mtc.launch.py
src/voice_grabber/src/: mtc_node.cpp
(+862 files in other folders)
